@@ -60,4 +60,15 @@ class Ingo_Form_Spam extends Ingo_Form_Base
         );
     }
 
+    public function validate($vars = null, $canAutoFill = false)
+    {
+        if (is_null($vars)) {
+            $vars = $this->_vars;
+        }
+        if (strlen($vars->get('folder_new'))) {
+            $this->folder_var->type->newFolderSet = true;
+        }
+        return parent::validate($vars, $canAutoFill);
+    }
+
 }
