@@ -2,6 +2,7 @@
 v3.2.12-git
 -----------
 
+[jan] Fix creating new spam folders.
 
 
 -------
